--- a/public/src/contents/motec/motec.css
+++ b/public/src/contents/motec/motec.css
@@ -1,3 +1,4 @@
+/* TODO: Plan to delete. */
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 
