--- a/public/prototype/damage.css
+++ b/public/prototype/damage.css
@@ -4,3 +4,108 @@
 .contents {
   background-color: #1b1d1e;
 }
+
+
+/*
+ * Share
+ */
+.header {
+  background-color: #C1D9F0;
+  display: flex;
+  justify-content: center;
+}
+
+.header > span {
+  color: #000000;
+  font-size: 1.5rem;
+  font-family: 'Oswald', sans-serif;
+}
+
+.value {
+  margin: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.value > span {
+  color: #FFFFFF;
+  font-size: 2rem;
+  font-family: 'Inconsolata', monospace;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon > img {
+  width: 2rem;
+  height: 2rem;
+  margin: 0.5rem;
+}
+
+.border {
+  border-left: solid;
+  border-left-width: 0.1rem;
+  border-left-color: #777777;
+  border-right: solid;
+  border-right-width: 0.1rem;
+  border-right-color: #777777;
+  border-bottom: solid;
+  border-bottom-width: 0.1rem;
+  border-bottom-color: #777777;
+}
+
+/*
+ * Car damage
+ */
+.carDamage {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.engineDamage {
+  margin-right: 1rem;
+}
+
+.engineDamage,
+.aeroDamage {
+  width: 8rem;
+  display: flex;
+  flex-direction: column;
+}
+
+/*
+ * Tyre damage
+ */
+.tyreDamage {
+  display: flex;
+  flex-direction: column;
+}
+
+.frontTyre,
+.rearTyre {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.leftTyre,
+.rightTyre {
+  width: 9rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.brake,
+.suspension {
+  display: flex;
+  align-items: center;
+}
+
+.brake > .value,
+.suspension > .value {
+  width: 4.5rem;
+}
