Add bold font style on Inconsolata

--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald');
-@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700');
 @import url("headline.css");
 
 * {
