--- a/public/prototype/buttonBox.css
+++ b/public/prototype/buttonBox.css
@@ -30,31 +30,55 @@ body {
 /********************************
  * button
  ********************************/
-.button {
-	width: 3rem;
-	height: 3rem;
-	border-radius: 50%;
-	position: relative;
-	background: #cb4e4e;
-	box-shadow: 0 0.5rem #ab3c3c;
+.input {
+  display: none;
 }
 
-.button:after {
-  position: absolute;
-}
-
-.button:before {
+.span {
   position: relative;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background: rgba(255, 85, 94, 1);
 }
 
-.button:active {
-	box-shadow: 0 0 #ab3c3c;
-	top: 0.5rem;
+.span:before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background: rgba(255, 85, 94, 0.3);
+}
+
+.input:checked + .span:before {
+  animation: pulsate 1s ease-out;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(0, 0);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(8, 8);
+    opacity: 0.0;
+  }
 }
 
 /********************************
  * topContents
  ********************************/
+.topContents {
+  display: flex;
+}
 
 /********************************
  * bottomContents
