--- a/public/prototype/buttonBox.css
+++ b/public/prototype/buttonBox.css
@@ -28,6 +28,21 @@ body {
 }
 
 /********************************
+ * topContents
+ ********************************/
+.topContents {
+  width: 100%;
+  height: 100%;
+  margin-top: 1rem;
+  display: flex;
+}
+
+
+
+
+
+
+/********************************
  * button
  ********************************/
 .input {
@@ -74,18 +89,12 @@ body {
 }
 
 /********************************
- * topContents
- ********************************/
-.topContents {
-  display: flex;
-}
-
-/********************************
  * bottomContents
  ********************************/
 .bottomContents {
   width: 100%;
   height: 12rem;
-
-  background-color: blue;
+  display: flex;
+  align-items: center;
+  background-color: #DDDDDD;
 }
