--- a/public/prototype/buttonBox.css
+++ b/public/prototype/buttonBox.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 
 * {
   margin: 0;
@@ -33,18 +34,61 @@ body {
 .topContents {
   width: 100%;
   height: 100%;
-  margin-top: 1rem;
+  display: flex;
+  align-items: space-around;
+}
+
+.leftButtons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.leftTopButtons {
   display: flex;
 }
 
+.crossButtons {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.leftBottomButtons {
+  display: flex;
+}
 
+.rightButtons {
+  flex-grow: 1;
+  display: flex:
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-
+.rightColumn {
+  height: 25%;
+  display: flex;
+}
 
 /********************************
  * button
  ********************************/
+.labelLeft {
+  width: 6rem;
+  height: 6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.labelRight{
+  display: flex;
+  flex-direction: column;
+}
+
 .input {
   display: none;
 }
@@ -54,8 +98,8 @@ body {
   display: block;
   top: 0;
   left: 0;
-  width: 3rem;
-  height: 3rem;
+  width: 4rem;
+  height: 4rem;
   border-radius: 50%;
   background: rgba(255, 85, 94, 1);
 }
@@ -65,14 +109,14 @@ body {
   content: "";
   top: 0;
   left: 0;
-  width: 3rem;
-  height: 3rem;
+  width: 4rem;
+  height: 4rem;
   border-radius: 50%;
   background: rgba(255, 85, 94, 0.3);
 }
 
 .input:checked + .span:before {
-  animation: pulsate 1s ease-out;
+  animation: pulsate 0.2s ease-out;
 }
 
 @keyframes pulsate {
@@ -89,12 +133,61 @@ body {
 }
 
 /********************************
+ * button with description
+ ********************************/
+.buttonWithDescription {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.description {
+  display: block;
+  width: 100%;
+  font-size: 1.5rem;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+/********************************
+ * custom button
+ ********************************/
+.customButton {
+  width: 8rem;
+  border-style: solid;
+  border-color: #899ba9;
+  border-width: 0.1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.customButton > span {
+  margin: 0.5rem;
+  font-size: 1rem;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.customButton:hover {
+  background-color: #80adfd;
+}
+
+.customButton:hover > span {
+  color: #000000;
+}
+
+/********************************
  * bottomContents
  ********************************/
 .bottomContents {
   width: 100%;
   height: 12rem;
   display: flex;
-  align-items: center;
-  background-color: #DDDDDD;
+  background-color: #555555;
 }
