Modify Made it easier to push the Menu Icon

--- a/public/prototype/menuIcon.css
+++ b/public/prototype/menuIcon.css
@@ -46,3 +46,60 @@
 .menuopen:checked:after {
   transform: rotate(45deg)
 }
+
+
+
+/* input[type="checkbox"]:checked { */
+    /* [> Apply Styles Here <] */
+/* } */
+
+.menuIcon2 {
+  z-index: 3;
+  position: absolute;
+  margin: 1rem;
+}
+
+.toggle {
+  display: none;
+}
+
+/**
+  Hamburger
+**/
+.hamburger {
+  position: absolute;
+  width: 3rem;
+  height: 4rem;
+  z-index: 5;
+}
+
+.hamburger > div {
+  position: relative;
+  width: 100%;
+  height: 0.5rem;
+  margin-top: 0.5rem;
+  border-radius: 0.5rem;
+  background-color: #f8982b;
+  transition: all 0.3s ease-in-out;
+}
+
+/**
+Animations
+**/
+.toggle:checked + .hamburger > .topBun {
+  margin-top: 1.5rem;
+  transform: rotate(-45deg);
+}
+.toggle:checked + .hamburger > .bottomBun {
+  opacity: 0;
+  transform: rotate(45deg);
+}
+.toggle:checked + .hamburger > .meat {
+  margin-top: -0.5rem;
+  transform: rotate(45deg);
+}
+
+.toggle:checked + .hamburger + .nav {
+  top: 0;
+  transform: scale(1);
+}
