--- a/public/src/menu/menuIcon.css
+++ b/public/src/menu/menuIcon.css
@@ -3,43 +3,59 @@
  */
 .menuIcon {
   position: absolute;
-}
-
-.toggle {
-  display: none;
-}
-
-.hamburger {
-  position: absolute;
   width: 3rem;
-  height: 4rem;
-  z-index: 5;
+  height: 3rem;
 }
 
-.hamburger > div {
-  position: relative;
+.menuIcon input {
+  position: absolute;
+  filter: alpha(opacity=0);
+  opacity: 0;
   width: 100%;
-  height: 0.5rem;
-  margin-top: 0.5rem;
-  background-color: #FFFFFF;
-  transition: all 0.3s ease-in-out;
+  height: 100%;
 }
 
-.toggle:checked + .hamburger > .topBun {
-  margin-top: 1.5rem;
+.menuIcon input:checked ~ .top,
+.menuIcon input:checked ~ .bottom {
+  top: 50%;
+}
+
+.menuIcon input:checked ~ .top {
+  transform: rotate(45deg);
+}
+
+.menuIcon input:checked ~ .bottom {
   transform: rotate(-45deg);
 }
 
-.toggle:checked + .hamburger > .bottomBun {
+.menuIcon input:checked ~ .middle {
+  filter: alpha(opacity=0);
   opacity: 0;
-  transform: rotate(45deg);
 }
 
-.toggle:checked + .hamburger > .meat {
-  margin-top: -0.5rem;
-  transform: rotate(45deg);
+.menuIcon input:checked ~ .circle {
+  filter: alpha(opacity=100);
+  opacity: 1;
 }
 
-.toggle:checked + .hamburger {
-  transform: scale(1);
+.menuIcon > span {
+  position: absolute;
+  display: block;
+  width: 3rem;
+  height: 0.2rem;
+  background-color: #fff;
+  transition: all 0.3s;
+  z-index: -1;
+}
+
+.menuIcon > .top {
+  top: 15%;
+}
+
+.menuIcon > .middle {
+  top: 50%;
+}
+
+.menuIcon > .bottom {
+  top: 85%;
 }
