--- a/public/src/menu/menuIcon.css
+++ b/public/src/menu/menuIcon.css
@@ -1,61 +1,66 @@
 /*
  * menu icon
  */
-.menuIcon {
+.menu {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+}
+
+.menuOpenButton {
   position: absolute;
   width: 3rem;
   height: 3rem;
+  border-radius: 100%;
+  color: #FFFFFF;
+  background: rgba(0, 0, 0, 0);
+  transition: ease-out 200ms;
 }
 
-.menuIcon input {
+.menuOpen {
+  display: none;
+}
+
+.hamburger {
   position: absolute;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.menuIcon input:checked ~ .top,
-.menuIcon input:checked ~ .bottom {
+  display: block;
   top: 50%;
+  left: 50%;
+  width: 2rem;
+  height: 0.2rem;
+  margin-top: -0.125rem;
+  margin-left: -1rem;
+  background: #FFFFFF;
+  transition: 200ms;
 }
 
-.menuIcon input:checked ~ .top {
+.hamburger1 {
+  transform: translateY(-0.5rem);
+}
+
+.hamburger3 {
+  transform: translateY(0.5rem);
+}
+
+.menuOpen:checked + .menuOpenButton > .hamburger1 {
   transform: rotate(45deg);
 }
 
-.menuIcon input:checked ~ .bottom {
+.menuOpen:checked + .menuOpenButton > .hamburger2 {
+  transform: scaleX(0);
+}
+
+.menuOpen:checked + .menuOpenButton > .hamburger3 {
   transform: rotate(-45deg);
 }
 
-.menuIcon input:checked ~ .middle {
-  filter: alpha(opacity=0);
-  opacity: 0;
+.menuOpenButton {
+  z-index: 2;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 400ms;
 }
 
-.menuIcon input:checked ~ .circle {
-  filter: alpha(opacity=100);
-  opacity: 1;
-}
-
-.menuIcon > span {
-  position: absolute;
-  display: block;
-  width: 3rem;
-  height: 0.2rem;
-  background-color: #fff;
-  transition: all 0.3s;
-  z-index: -1;
-}
-
-.menuIcon > .top {
-  top: 15%;
-}
-
-.menuIcon > .middle {
-  top: 50%;
-}
-
-.menuIcon > .bottom {
-  top: 85%;
+.menuOpen:checked + .menuOpenButton {
+  transition-timing-function: linear;
+  transition-duration: 200ms;
 }
