--- a/public/src/share/smallContent.css
+++ b/public/src/share/smallContent.css
@@ -60,7 +60,7 @@
 
 .speedValue > span,
 .speedUnit > span {
-  color: #FFFFFF;
+  color: #ffffff;
   font-family: 'Inconsolata', monospace;
 }
 
@@ -100,7 +100,7 @@
 
 .fuelValue > span,
 .fuelUnit > span {
-  color: #FFFFFF;
+  color: #ffffff;
   font-family: 'Inconsolata', monospace;
 }
 
