--- a/public/src/contents/default/default.css
+++ b/public/src/contents/default/default.css
@@ -85,9 +85,6 @@
   display: flex;
 }
 
-.current > div {
-}
-
 .current > div > span {
   font-size: 2.5rem;
 }
@@ -105,10 +102,32 @@
   align-items: center;
 }
 
+.currentLapTimeBox {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.currentLapGap {
+  margin-bottom: 0.25rem;
+  display: flex;
+  align-items: center;
+}
+
+.currentLapGap > span {
+  font-size: 1.5rem;
+}
+
 .currentLapTime {
   margin-right: 1rem;
   display: flex;
   align-items: center;
+}
+
+.currentLapTime > span {
+  font-size: 2.5rem;
 }
 
 /*
